# scan_to_smpl

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  REFERENCES.md  REVIEW.md  Research.md  notes.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: phase1_spec.md  phase2_spec.md  phase3_spec.md  phase4_spec.md  phase5_spec.md  phase5_spec_supplement.md
docs/features/selfcal-default-extrinsics/: 00-master-design-spec.md  10-spec-scantosmpl.md
docs/features/selfcal-default-extrinsics/briefs/: phase5-integration-tests.md  phase5-selfcal-pipeline.md  retire-colmap-modules.md
scantosmpl/: __init__.py  cli.py  config.py  types.py
scantosmpl/calibration/: __init__.py  colmap_reader.py  correspondence.py  frame_alignment.py  intrinsics.py  pipeline.py  pnp_solver.py  undistort.py
scantosmpl/detection/: __init__.py  image_loader.py  keypoint_detector.py  person_detector.py  pipeline.py  view_classifier.py
scantosmpl/fitting/: __init__.py  losses.py  optimiser.py  pipeline.py  rear_views.py
scantosmpl/hmr/: __init__.py  camera_hmr.py  consensus.py  orientation.py  pipeline.py
scantosmpl/smpl/: joint_map.py  model.py
scantosmpl/triangulation/: __init__.py  dlt.py  ransac.py
scantosmpl/utils/: clean_smpl.py  geometry.py
tests/: pytest.ini  test_consensus.py  test_detection.py  test_fitting.py  test_hmr.py  test_pnp.py  test_rear_views.py  test_smpl_model.py  test_triangulation.py
tests/integration/: test_consensus_integration.py  test_detection_integration.py  test_hmr_integration.py  test_phase5_integration.py  test_pnp_integration.py
